--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="domain-box mt-6">
             <p class="text-xl font-bold">roblox.com.ni <span class="text-red-500">GLOBAL & TIKTOK</span></p>
             <p class="text-red-500 text-2xl mt-2">★★★★★</p>
-            <a href="https://www.genned.net/auth/dv912" target="_blank" class="use-domain-btn">Use domain →</a>
+            <a href="https://www.genned.net/auth/society" target="_blank" class="use-domain-btn">Use domain →</a>
         </div>
     </div>
     
